fix homepage on mobile

--- a/src/styles/Home.module.css
+++ b/src/styles/Home.module.css
@@ -13,12 +13,16 @@
   height: 100%;
   position: relative;
   flex: 1;
+  clip-path: polygon(20% 0%, 100% 0%, 80% 100%, 0% 100%);
+  margin-right: -4%;
 }
 
 .sectionLarge {
   height: 100%;
   position: relative;
   flex: 3;
+  clip-path: polygon(0% 0%, 100% 0%, 90% 100%, 0% 100%);
+  margin-right: -7%;
 }
 
 .background {
@@ -161,10 +165,14 @@
   .section {
     width: 100%;
     height: auto;
+    clip-path: none;
+    margin-right: 0;
   }
   .sectionLarge {
     width: 100%;
     height: auto;
+    clip-path: none;
+    margin-right: 0;
   }
   .disclaimer {
     width: 100%;
